--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/anvaka/whenscrolled"
+  },
+  "dependencies": {
+    "an": "0.0.7"
   }
 }
